# kcstools

./: .gitignore  LICENSE  README.md  pyproject.toml  tiny_train.py
.github/workflows/: ci.yml
src/py_template/: example.py
tests/: test_example.py  test_torch_basics.py
